--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="app">
         <!-- loader starts
         ============================================= -->
-        <!-- <div class="loader">
+        <div class="loader">
             <div class="loader-inner">
                 <div class="loader-line-wrap">
                     <div class="loader-line"></div>
@@ -45,7 +45,7 @@
                     <div class="loader-line"></div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <!-- header starts
         ============================================= -->
